force-app/main/default/objects/CarePlan_Hierarchy__c/CarePlan_Hierarchy__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CarePlan Hierarchy</label>
</CustomObject>