force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnosis</label>
    <type>Checkbox</type>
</CustomField>