force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Fifth_Level__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Level__c</fullName>
    <label>Fifth Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>