force-app/main/default/objects/CarePlan_Hierarchy__c/fields/First_Level__c.field-meta.xml
<CustomField>
    <fullName>First_Level__c</fullName>
    <label>First Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>