force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Fourth_Level__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Level__c</fullName>
    <label>Fourth Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>