force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Relationship_level_1__c.field-meta.xml
<CustomField>
    <fullName>Relationship_level_1__c</fullName>
    <label>Relationship level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>