force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Relationship_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Level_3__c</fullName>
    <label>Relationship Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>