force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Second_Level__c.field-meta.xml
<CustomField>
    <fullName>Second_Level__c</fullName>
    <label>Second Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>