force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Sixth_Level__c.field-meta.xml
<CustomField>
    <fullName>Sixth_Level__c</fullName>
    <label>Sixth Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>