force-app/main/default/objects/CarePlan_Hierarchy__c/fields/Third_Level__c.field-meta.xml
<CustomField>
    <fullName>Third_Level__c</fullName>
    <label>Third Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>